--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik RouterOS Auto Backup to E-Mail - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
+    <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
@@ -277,6 +278,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	 margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -352,12 +355,11 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
     <div class="logo">	  
-      <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+      <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
     </div>
     <div class="header">
       <h1>MIKROTIK ROUTER-OS <span style='color:#ff6600;'>AUTO BACKUP TO E-MAIL</span> SCRIPT GENERATOR</h1>
@@ -422,43 +424,43 @@
                 # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
                 ###################################################<br>
                 </span>			
-				/tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" <span id="tls-option">start-tls="yes"</span> </span> user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"</br>
+				/tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" <span id="tls-option">start-tls="yes"</span> user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"<br>
                 /system scheduler rem [find name=BACKUP-TO-EMAIL]<br>
                 /system scheduler add interval=<span style="color:#ff6600" id="mail-interval">7d</span> name=BACKUP-TO-EMAIL on-event="#=======================================================\r\
-				</br>
-                \n# Mikrotik RouterOS Auto Backup to E-Mail by Buananetpbun.github.io\r\</br>
-                \n#=======================================================\r\</br>
-                \n:global date [/system clock get date]\r\</br>
-                \n:global d [:pick \$date 4 6]\r\</br>
-                \n:global m [:pick \$date 0 3] \r\</br>
-                \n:global y [:pick \$date 7 11]\r\</br>
+				<br>
+                \n# Mikrotik RouterOS Auto Backup to E-Mail by Buananetpbun.github.io\r\<br>
+                \n#=======================================================\r\<br>
+                \n:global date [/system clock get date]\r\<br>
+                \n:global d [:pick \$date 4 6]\r\<br>
+                \n:global m [:pick \$date 0 3] \r\<br>
+                \n:global y [:pick \$date 7 11]\r\<br>
                 <span  id="show-hide-backup">
-                \n:log warning \"-> Backup to E-Mail Now\"\r\</br>
-                \n:global backupfile ([/system identity get name] . \"-\" . \"\$m-\$d-\$y\")\r\</br>
-                \n/system backup save name=\$backupfile\r\</br>
-                \n:delay 20s\r\</br>
-                \n:log warning \"-> Backup Being E-Mailed\"\r\</br>	
-                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to1">your-mail@mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from2">Backup From My Router</span>\" file=(\"\$backupfile\" . \".backup\") <span id="tls-option1">start-tls="yes"</span>\r\</br>
-                \n:delay 20s\r\</br>
-                \n:log warning \"-> Backup File Remove\"\r\</br>
-                \n/file remove (\"\$backupfile\" . \".backup\")\r\</br>
-                \n:delay 5s\r\</br>
-                \n:log warning \"-> Backup To E-Mail Finished\"\r\</br>
-                \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup</br>
+                \n:log warning \"-> Backup to E-Mail Now\"\r\<br>
+                \n:global backupfile ([/system identity get name] . \"-\" . \"\$m-\$d-\$y\")\r\<br>
+                \n/system backup save name=\$backupfile\r\<br>
+                \n:delay 20s\r\<br>
+                \n:log warning \"-> Backup Being E-Mailed\"\r\<br>	
+                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to1">your-mail@mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from2">Backup From My Router</span>\" file=(\"\$backupfile\" . \".backup\") <span id="tls-option1">start-tls="yes"</span>\r\<br>
+                \n:delay 20s\r\<br>
+                \n:log warning \"-> Backup File Remove\"\r\<br>
+                \n/file remove (\"\$backupfile\" . \".backup\")\r\<br>
+                \n:delay 5s\r\<br>
+                \n:log warning \"-> Backup To E-Mail Finished\"\r\<br>
+                \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup<br>
                 </span>
                 <span  hidden id="show-hide-rsc">
-                \n:log warning \"-> Backup To E-Mail Now\"\r\</br>
-                \n:global backupfilersc ([/system identity get name] . \"-\" . \"\$m-\$d-\$y\")\r\</br>
-                \n<span id="export-rsc"></span> file=\$backupfilersc\r\</br>
-                \n:delay 20s\r\</br>
-                \n:log warning \"-> Backup Being E-Mailed\"\r\</br>	
-                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to2">your-mail@your.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from3">Backup From My Router</span>\" file=(\"\$backupfilersc\" . \".rsc\") <span id="tls-option2">start-tls="yes"</span>\r\</br>
-                \n:delay 20s\r\</br>
-                \n:log warning \"-> Backup File Remove\"\r\</br>
-                \n/file remove (\"\$backupfilersc\" . \".rsc\")\r\</br>
-                \n:delay 5s\r\</br>
-                \n:log warning \"-> Backup To E-Mail Finished\"\r\</br>
-                \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup</br>
+                \n:log warning \"-> Backup To E-Mail Now\"\r\<br>
+                \n:global backupfilersc ([/system identity get name] . \"-\" . \"\$m-\$d-\$y\")\r\<br>
+                \n<span id="export-rsc"></span> file=\$backupfilersc\r\<br>
+                \n:delay 20s\r\<br>
+                \n:log warning \"-> Backup Being E-Mailed\"\r\<br>	
+                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to2">your-mail@your.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from3">Backup From My Router</span>\" file=(\"\$backupfilersc\" . \".rsc\") <span id="tls-option2">start-tls="yes"</span>\r\<br>
+                \n:delay 20s\r\<br>
+                \n:log warning \"-> Backup File Remove\"\r\<br>
+                \n/file remove (\"\$backupfilersc\" . \".rsc\")\r\<br>
+                \n:delay 5s\r\<br>
+                \n:log warning \"-> Backup To E-Mail Finished\"\r\<br>
+                \n" policy=ftp,reboot,read,write,policy,test,password,sniff,sensitive,romon start-time=startup<br>
                 </span>
               </td>
             </tr>
@@ -470,9 +472,10 @@
     </div>
     <div class="footer">
       <div style="margin-top:0px; text-align:center">
-        © Copyright 2020-<span id="tahun">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
+        © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a>
       </div>
     </div>
+	</div>
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
@@ -491,8 +494,9 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript">
-	document.getElementById("year").innerHTML = new Date().getFullYear();
+
+	    <script>
+			document.getElementById("year").innerHTML = new Date().getFullYear();
       var modal = document.getElementById("myModal");
       var span = document.getElementsByClassName("close")[0];
       function callmodal() {
