--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -288,7 +288,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #ddd;
+      background-color: #f9f9f9;
 	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
 	  margin-right:10px;
       }
