--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Bonding Interface / Link Aggregation Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik Bonding Interface / Link Aggregation Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='Mikrotik Bonding Interface / Link Aggregation Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
+    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
@@ -267,6 +267,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -342,14 +344,13 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
       <div class="logo">
         <a href="https://buananetpbun.github.io/mikrotik-bonding-interface.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
         <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
         <div style="float:right; margin-right:5px; margin-top:1px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -364,9 +365,9 @@
         </div>
         <div style="clear:both"></div>
         <div style="float:left; width:440px; padding:0 20px 20px 20px; border-right:1px solid #bbb">
-          <center>
+          <div style="text-align:center">
             <h2>MIKROTIK - A</h2>
-          </center>
+         </div>
           <div style="padding-top:10px"></div>
           <label><b>Bonding Name</b></label><br>
           <input type="text" id="input-r1-name" value="bonding" placeholder="bonding" onkeyup="myFunction()">
@@ -406,12 +407,12 @@
             </div>
           </div>
           <br>
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button>  
+          <button style="margin-top:-5px"  type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button>  
         </div>
         <div style="float:right; width:440px;padding:0 20px 20px 20px;">
-          <center>
+          <div style="text-align:center">
             <h2>MIKROTIK - B</h2>
-          </center>
+          </div>
           <div style="padding-top:10px"></div>
           <label><b>Bonding Name</b></label><br>
           <input type="text" id="input-r2-name" value="bonding" placeholder="bonding" onkeyup="myFunction()">
@@ -451,7 +452,7 @@
             </div>
           </div>
           <br>
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r2'))">Copy Script</button>
+          <button style="margin-top:-5px" type="button" onclick="myFunction(); myCheck();selectElementContents(document.getElementById('list-output-r2'))">Copy Script</button>
         </div>
       </div>
       <div class="footer">
