--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport' />
+    <meta charset='utf-8' >
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport' >
     <title>Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator - BuanaNETPBun.Github.io' name='description' />
-    <meta content='expired, isolation, pppoe, port knocking, knock, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords' />
-    <meta content='index, follow, noodp' name='robots' />
+    <meta content='Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator - BuanaNETPBun.Github.io' name='description' >
+    <meta content='expired, isolation, pppoe, port knocking, knock, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords' >
+    <meta content='index, follow, noodp' name='robots' >
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator By BuanaNET-Pbun">
@@ -313,6 +313,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -388,14 +390,13 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
       <div class="logo">
         <a href="https://buananetpbun.github.io"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
         <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
         <div style="float:right; margin-right:5px; margin-top:1px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -470,12 +471,12 @@
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
           <div class="list-mangle2">
-            <center>
+            <span style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
               <span id="msg-body" style="color:#fff; font-weight:bold; font-size:15px;line-height:2.0">
               DEAR CUSTOMER, WE INFORM YOU THAT YOUR INTERNET SERVICE IS CURRENTLY ISOLATED. PLEASE MAKE PAYMENT OF THE BILL THROUGH THE ACCOUNT WE PROVIDE. IN ORDER FOR THE INTERNET SERVICE TO REMAIN ACTIVE, IT IS REQUESTED TO MAKE A PAYMENT BEFORE THE DUE DATE OF EACH MONTH.</span><br><br>
               <span id="msg-contact" style="color:#fff; font-weight:bold; font-size:15px;;line-height:2.0">Contact Owner: +62 813-2222-3333</span><br>
-            </center>
+            </span>
           </div>
           <br>
         </div>
