--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -471,12 +471,12 @@
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
           <div class="list-mangle2">
-            <span style="text-align:center">
+            <center>
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
               <span id="msg-body" style="color:#fff; font-weight:bold; font-size:15px;line-height:2.0">
               DEAR CUSTOMER, WE INFORM YOU THAT YOUR INTERNET SERVICE IS CURRENTLY ISOLATED. PLEASE MAKE PAYMENT OF THE BILL THROUGH THE ACCOUNT WE PROVIDE. IN ORDER FOR THE INTERNET SERVICE TO REMAIN ACTIVE, IT IS REQUESTED TO MAKE A PAYMENT BEFORE THE DUE DATE OF EACH MONTH.</span><br><br>
               <span id="msg-contact" style="color:#fff; font-weight:bold; font-size:15px;;line-height:2.0">Contact Owner: +62 813-2222-3333</span><br>
-            </span>
+            </center>
           </div>
           <br>
         </div>
