--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io' name='description'>
+    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning By BuanaNET-Pbun">
     <meta property="og:description" content="Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning By BuanaNET-Pbun">
@@ -271,6 +271,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -346,14 +348,13 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
       <div class="logo">
         <a href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
         <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
         <div style="float:right; margin-right:5px; margin-top:1px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -410,8 +411,8 @@
           <input type="checkbox" id="mikrotik-ipcloud" onclick="myCheck()">
           <label for="mikrotik-ipcloud">Block IP Cloud</label>
           <div style="margin-top:30px"></div>
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="myFunction()">Generate</button> 
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
+          <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
+          <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
           <div class="list-mangle">
             <div id="list-output-r1">
               <span style="color:#ff6600;">
