--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -259,9 +259,9 @@
           <h1>MikroTik Hotspot Wizard</h1>
           <div class="tab">
             <b>Target Interface WAN / Internet </b>
-            <input type="text" placeholder="ether1" oninput="this.className = ''" value="ether1" id="eth-int">
+            <p><input type="text" placeholder="ether1" oninput="this.className = ''" value="ether1" id="eth-int"></p>
             <b>Target Interface WLAN / Hotspot</b>
-            <input type="text" placeholder="ether2" oninput="this.className = ''" value="ether2" id="eth-hs">
+            <p><input type="text" placeholder="ether2" oninput="this.className = ''" value="ether2" id="eth-hs"></p>
             <span style="float:left !important;">
             <input type="checkbox" id="myCheck" onclick="myCheck()">
             <label for="myCheck"> Use Mikrotik Internal Wireless</label>
@@ -269,26 +269,26 @@
           </div>
           <div class="tab">
             <b>DNS Name</b> (hotspot domain name)
-            <input type="text" placeholder="myhotspot.net" oninput="this.className = ''" value="myhotspot.net" id="url-hs">
+            <p><input type="text" placeholder="myhotspot.net" oninput="this.className = ''" value="myhotspot.net" id="url-hs"></p>
             <b>SSID Name</b> (mikrotik internal wireless support only)
-            <input disabled type="text" placeholder="My Wifi Home" oninput="this.className = ''" value="My Wifi Home" id="ssid-hs">
+            <p><input disabled type="text" placeholder="My Wifi Home" oninput="this.className = ''" value="My Wifi Home" id="ssid-hs"></p>
           </div>
           <div class="tab">
             <span style="width: 295px;float:left">
               <b>User Name </b>
-              <input type="text" placeholder="admin" oninput="this.className = ''" value="user" id="u-name">
+              <p><input type="text" placeholder="admin" oninput="this.className = ''" value="user" id="u-name"></p>
             </span>
             <span style="width: 295px;float:right">
               <b>Shared User</b>
-              <input type="text" placeholder="10" oninput="this.className = ''" value="10" id="shared-user">
+              <p><input type="text" placeholder="10" oninput="this.className = ''" value="10" id="shared-user"></p>
             </span>
             <span style="width: 295px;float:left">
               <b>Password</b>
-              <input type="text" placeholder="12345" oninput="this.className = ''" value="user123" id="u-pass">
+              <p><input type="text" placeholder="12345" oninput="this.className = ''" value="user123" id="u-pass"></p>
             </span>
             <span style="width: 295px;float:right">
               <b>Limit Per User</b> (Upload/Download)
-              <input type="text" placeholder="1M/2M" oninput="this.className = ''" value="1M/2M" id="limit-user">
+              <p><input type="text" placeholder="1M/2M" oninput="this.className = ''" value="1M/2M" id="limit-user"></p>
             </span>
             <div style="clear:both"></div>
           </div>
