--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset='utf-8'/>
+      <meta charset='utf-8'>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Advanced Mikrotik Router-OS Protection - BuanaNETPBun.Github.io</title>
-      <meta content='Advanced Mikrotik Router-OS Protection - BuanaNETPBun.Github.io' name='description'/>
-      <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
-      <meta content='index, follow, noodp' name='robots'/>
+      <meta content='Advanced Mikrotik Router-OS Protection - BuanaNETPBun.Github.io' name='description'>
+      <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+      <meta content='index, follow, noodp' name='robots'>
       <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
       <meta property="og:title" content="Advanced Mikrotik Router-OS Protection By BuanaNET-Pbun">
       <meta property="og:description" content="Advanced Mikrotik Router-OS Protection By BuanaNET-Pbun">
@@ -271,7 +271,9 @@
          margin: 0;
          padding: 0;
          overflow: hidden;
-         background-color: #f9f9f9;
+		  background-color: #f9f9f9;
+		  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+		  margin-right:10px;
          }
          .mymenu li {
          float: left;
@@ -360,14 +362,13 @@
             <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
             <li><a href="javascript:callmodal()">DONATE</a></li>
             <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-            <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
          </ul>
       </div>
       <div id="wrap">
          <div class="logo">
             <a href="https://buananetpbun.github.io/advanced-mikrotik-protection.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
             <div style="float:right">
-               <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+               <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
             </div>
             <div style="float:right; margin-right:5px; margin-top:1px">
                <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -504,7 +505,6 @@
                      /ip service set www-ssl port=443 address=0.0.0.0/0 disabled=yes
                      </code>
                   </td>
-                  </td>
                </tr>
                <tr>
                   <th style="background-color:#ccc; font-size:16px">Advanced Router Security</th>
@@ -556,7 +556,6 @@
 # Disable Bootloader Protector<br>
                      /system routerboard settings set protected-routerboot=disabled <br>
                      </code>
-                  </td>
                   </td>
                </tr>
                <tr>
@@ -621,7 +620,7 @@
                      <br>
                      <code class="routeros">
 # Anti Hack from EXPLOIT<br>
-                     /ip firewall filter add action=reject chain=input content=user.dat reject-with=icmp-network-unreachable comment="Anti Hack Exploit"</br>
+                     /ip firewall filter add action=reject chain=input content=user.dat reject-with=icmp-network-unreachable comment="Anti Hack Exploit"<br>
                      /ip firewall filter add action=drop chain=input content=user.dat
                      </code>
                   </td>
@@ -720,7 +719,8 @@ if ($a != "") do={[
                      /ip firewall filter<br>
                      add chain=input dst-port=53 in-interface-list=WAN protocol=tcp action=drop comment="Block Open Recursive DNS"<br>
                      add chain=input dst-port=53 in-interface-list=WAN protocol=udp action=drop
-                  </td>
+                  </code>
+				  </td>
                </tr>
                <tr>
                   <td style="width:300px">
