--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
-      By BuanaNETPBun.Github.io' name='description'/>
-    <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+      By BuanaNETPBun.Github.io' name='description'>
+    <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" />
+    <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
     <meta property="og:title" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
     <meta property="og:description" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157738242-2c4de210-d8b6-4f7c-ab3a-b420ab3835ec.png">
     <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io">
-    <meta name="yandex-verification" content="2185da3345ca44f7" />
+    <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
 	<script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
     <style>
@@ -289,6 +289,8 @@ margin: 0;
 padding: 0;
 overflow: hidden;
 background-color: #f9f9f9;
+background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+margin-right:10px;
 }
 .mymenu li {
 float: left;
@@ -370,7 +372,6 @@ cursor: pointer;
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div class="content">
@@ -378,7 +379,7 @@ cursor: pointer;
         <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
       <div style="float:left;margin-top:10px">    
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
       </div>
       <script async src="https://cse.google.com/cse.js?cx=751bf7c3dc13f7e72"></script>
       <div style="float:right;width:300px;">
@@ -485,7 +486,7 @@ cursor: pointer;
 		<p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a> - Traffic Sniffer stream reader for Linux</p>
 		<p><a target="_blank"  href="https://forum.mikrotik.com/viewtopic.php?t=77193">ATTIX5 Traffic Monitor</a> - Attix5 - Traffice Real-Time Monitor Analysis Mikrotik</p>
 		<p><a target="_blank"  href="https://k3dt.eu/supout-reader/">Supout.rif Reader (Unofficial)</a> - This is a tool that decodes the Mikrotik RIF files (the files that you provide to their support team)</p>
-	    <p><a target="_blank"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet (Command Line Interface) </a> - There are some commands that are common to nearly all menu levels, namely: print, set, remove, add, find, get, export, enable, disable, comment, move.</h3>
+	    <p><a target="_blank"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet (Command Line Interface) </a> - There are some commands that are common to nearly all menu levels, namely: print, set, remove, add, find, get, export, enable, disable, comment, move.</p>
 		<h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER CUSTOM TOOLS</h3>
 	  <p><a target="_blank"  href="https://freeradius.org">FREERADIUS</a> - FreeRADIUS is a modular, high performance free RADIUS suite developed and distributed under the GNU General Public License, version 2, and is free for download and use. The FreeRADIUS Suite includes a RADIUS server, a BSD-licensed RADIUS client library, a PAM library, an Apache module, and numerous additional RADIUS related utilities and development libraries.</p>
 		<p><a target="_blank"  href="http://dmasoftlab.com">DMA Radius Manager</a> - DMA Radius Manager is a easy to use administration system for Mikrotik, Cisco, StarOS, Chillispot,DD-WRT, pfSense NAS devices and DOCSIS CMTS. It provides centralized authentication, accounting and billing functions.</p>
@@ -567,7 +568,7 @@ cursor: pointer;
             <p><b>PayPal</b> <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
             <p><b>Saweria</b> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
 			<p><b>Buymeacoffee</b> <a target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p> 
-            <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600;font-height:bold">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
+            <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600;font-weight:bold">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
             <br>
             <div style="float:left;margin-right:3px; margin-top:0px">
                <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
