--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset='utf-8'/>
+    <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Indonesia Time Zone NTP/SNTP Client MikroTik Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Indonesia Time Zone NTP/SNTP Client MikroTik Generator - BuanaNETPBun.Github.io' name='description'/>
-    <meta content='Time Zone, sntp, ntp, bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'/>
-    <meta content='index, follow, noodp' name='robots'/>
+    <meta content='Indonesia Time Zone NTP/SNTP Client MikroTik Generator - BuanaNETPBun.Github.io' name='description'>
+    <meta content='Time Zone, sntp, ntp, bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Indonesia Time Zone NTP/SNTP Client MikroTik Generator By BuanaNET-Pbun">
     <meta property="og:description" content="Indonesia Time Zone NTP/SNTP Client MikroTik Generator By BuanaNET-Pbun">
@@ -270,6 +270,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -345,14 +347,13 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
       <div class="logo">
         <a href="https://buananetpbun.github.io/mirkotik-indonesia-timezone.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
         <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
         <div style="float:right; margin-right:5px; margin-top:1px">
           <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
@@ -408,7 +409,6 @@
           </select>
           <span style="margin-left:10px">Regional Area </span>
           <span style="color:green;">[ <span id="input-regional">Asia/Jakarta (+07:00 WIB)</span> ]</span>
-          </select>
           <div style="margin-top:10px"></div>
           <div class="list-mangle">
             <div id="list-output-r1">
