--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -360,7 +360,7 @@
         </div>
       </div>
       <div class="header">
-        <h1><span style="color:#ff6600 !important">MIKROTIK</span>: INDONESIA TIME ZONE NTP/SNTP CLIENT GENERATOR</h1>
+        <h1>MIKROTIK: INDONESIA <span style="color:#ff6600 !important">TIME ZONE NTP/SNTP</span> CLIENT GENERATOR</h1>
       </div>
       <div class="sidebar">
         <div style="clear:both"></div>
