--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -275,6 +275,8 @@
       padding: 0;
       overflow: hidden;
       background-color: #f9f9f9;
+	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
+	  margin-right:10px;
       }
       .mymenu li {
       float: left;
@@ -350,7 +352,6 @@
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
     <div id="wrap">
