--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -104,7 +104,7 @@
       }
       .header-right {
       float:right;
-      margin-top:-2px;
+      margin-top:0px;
       border-radius: 5px;  
       }
       .content{
@@ -480,13 +480,11 @@
         </div>
       </div>
       <div class="header">
-        <span class="header-left">
-          <span style="float:left; margin-right:6px; margin-top:-2px">
-          <img src="https://buananetpbun.github.io/mikrotik/img/logo.png" alt="Mikrotik Script RouterOS">
-          </span>
+        <div class="header-left">
           <h1>MIKROTIK SCRIPT ROUTEROS DATABASE</h1>
-        </span>
-        <span class="header-right"><b>Contribution your script</b> <button style="margin-left:5px;" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfbuzYtFCI57y7nJHgnL1w0aiCY5g45Uon90u3XQm6pAi56BQ/viewform';">upload</button></span>
+        </div>
+        <div class="header-right"><b>Contribution your script</b> <button style="margin-left:5px;" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfbuzYtFCI57y7nJHgnL1w0aiCY5g45Uon90u3XQm6pAi56BQ/viewform';">upload</button>
+		</div>
         <div style='clear: both;'></div>
       </div>
       <div class="sidebar">
@@ -872,9 +870,6 @@
             </script> 
           </div>
           <div class="welcome" id="welcome">
-            <span style="float:left; display:inline;margin-right:6px; padding-top:-4px !important">
-            <img src="https://buananetpbun.github.io/mikrotik/img/logo.png" alt="Mikrotik Script RouterOS Database">
-            </span>
             <h2>COMPLETE MIKROTIK SCRIPT ROUTEROS DATABASE</h2>
 <pre>
 <span style="line-height: 1.4;">
