--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -101,6 +101,7 @@
       .header-left {
       float:left;
       width:450px;
+	  padding-bottom:5px;
       }
       .header-right {
       float:right;
