--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
 	<script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
-    <style>
+    <script src="bower_components/firebaseui/dist/firebaseui.js"></script>
+<link type="text/css" rel="stylesheet" href="bower_components/firebaseui/dist/firebaseui.css" />
+	<style>
 /* --------------------------------------------
 ################################################
 # Tools For Mikrotik By BuanaNETPBun.Github.io
