--- a/test.html
+++ b/test.html
@@ -203,6 +203,7 @@ button.social-signin.google {
   const firebaseConfig = {
   apiKey: "AIzaSyCT8JAhaUMfHfiK4o5ZKg3DgXWkXjTM7EQ",
   authDomain: "buananetpbun.github.io",
+  databaseURL: "coba-aja-ce06e.firebaseio.com",
   projectId: "coba-aja-ce06e",
   storageBucket: "coba-aja-ce06e.appspot.com",
   messagingSenderId: "9889985763",
