--- a/test.html
+++ b/test.html
@@ -202,12 +202,13 @@ button.social-signin.google {
   // Your web app's Firebase configuration
   const firebaseConfig = {
   apiKey: "AIzaSyCT8JAhaUMfHfiK4o5ZKg3DgXWkXjTM7EQ",
-  authDomain: "buananetpbun.github.io",
+  authDomain: "coba-aja-ce06e.firebaseapp.com",
   databaseURL: "coba-aja-ce06e.firebaseio.com",
   projectId: "coba-aja-ce06e",
   storageBucket: "coba-aja-ce06e.appspot.com",
   messagingSenderId: "9889985763",
   appId: "1:9889985763:web:2e7651d98efd4a4eec01d6"
+ 
   };
 
   // Initialize Firebase
