--- a/test.html
+++ b/test.html
@@ -201,13 +201,13 @@ button.social-signin.google {
 
   // Your web app's Firebase configuration
   const firebaseConfig = {
-  apiKey: "AIzaSyCT8JAhaUMfHfiK4o5ZKg3DgXWkXjTM7EQ",
-  authDomain: "coba-aja-ce06e.firebaseapp.com",
-  databaseURL: "https://coba-aja-ce06e.firebaseio.com",
-  projectId: "coba-aja-ce06e",
-  storageBucket: "coba-aja-ce06e.appspot.com",
-  messagingSenderId: "9889985763",
-  appId: "1:9889985763:web:2e7651d98efd4a4eec01d6"
+  apiKey: "AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns",
+  authDomain: "buananetpbun-5d979.firebaseapp.com",
+  projectId: "buananetpbun-5d979",
+  storageBucket: "buananetpbun-5d979.appspot.com",
+  messagingSenderId: "912166778245",
+  appId: "1:912166778245:web:c845ec7e720f7bd84580ec",
+  measurementId: "G-FSDV7HGD99"
  
   };
 
