--- a/test.html
+++ b/test.html
@@ -167,7 +167,9 @@ button.social-signin.google {
 }
 </style>
 </head>
-
+  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
 <body>
   
 <div id="login-box">
