--- a/test.html
+++ b/test.html
@@ -205,6 +205,7 @@ button.social-signin.google {
   const firebaseConfig = {
   apiKey: "AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns",
   authDomain: "buananetpbun-5d979.firebaseapp.com",
+  databaseURL: "https://buananetpbun-5d979.firebaseio.com",
   projectId: "buananetpbun-5d979",
   storageBucket: "buananetpbun-5d979.appspot.com",
   messagingSenderId: "912166778245",
